machine learning.ipynb

--- a/machine learning.ipynb
+++ b/machine learning.ipynb
@@ -73,8 +73,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Reading data and process features\n",
-    "data = pd.read_excel(r\"E:\\Essay-Doing\\climate & yield & quality\\prediction-yield-quality\\Data\\20230718气候与产量相关图.xlsx\",\n",
-    "                     sheet_name='Sheet5')\n",
+    "data = pd.read_excel('filename')\n",
     "data = data[['Region', 'Year', 'Yield_i', 'Yield_change', 'Prec', 'Tmean', 'Tmax', 'Tmin', 'Srad', 'Ssd', 'EAT', 'Lrad', 'AAT', 'Pres','Yield']]\n",
     "data = data.set_index(['Region', 'Year'])\n",
     "y = data['Yield']\n",
@@ -88,7 +87,7 @@
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "# Create a random forest regression model\n",
-    "rf_model = RandomForestRegressor(n_estimators=500, random_state=42, oob_score=True)  # 可根据需要调整超参数\n",
+    "rf_model = RandomForestRegressor(n_estimators=500, random_state=42, oob_score=True)",
     "\n",
     "# Fit the model on the training set\n",
     "rf_model.fit(X_train, y_train)\n",
